--- a/SurfingRedone/Login.xaml
+++ b/SurfingRedone/Login.xaml
@@ -1,14 +1,12 @@
-﻿<Page x:Class="SurfingRedone.loginscreen"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:SurfingRedone"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-     Title="Login" Height="392" Width="424" FontSize="15" Background="Aquamarine" 
-      >
-
+﻿<Window x:Class="SurfingRedone.Login"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:SurfingRedone"
+        mc:Ignorable="d"
+        Title="Login" Height="392" Width="424" FontSize="15" Background="Aquamarine"
+        WindowStartupLocation="CenterScreen">
     <Border Background="Black"  CornerRadius="20" Margin="20">
         <StackPanel Margin="30" Background="Black">
             <Label Content="Login" HorizontalAlignment="Center" Foreground="WhiteSmoke" FontSize="45"></Label>
@@ -20,4 +18,4 @@
             <Button Name="btnSubmit" Content="Submit" Margin="60 10" Background="DarkSlateGray" Foreground="White" FontSize="16" Click="btnSubmit_Click"></Button>
         </StackPanel>
     </Border>
-</Page>
+</Window>
