--- a/SurfingRedone/MainMenuPage.xaml
+++ b/SurfingRedone/MainMenuPage.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SurfingRedone.Menu"
+﻿<Window x:Class="SurfingRedone.MainMenuPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SurfingRedone"
         mc:Ignorable="d"
-        Title="Menu" Height="450" Width="800">
+        Title="MainMenuPage" Height="450" Width="800">
     <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="29*"/>
@@ -23,18 +23,11 @@
         </StackPanel>
 
         <StackPanel Grid.Row="1" Grid.Column="0" Margin="30,30,30,30" >
-            <Button Content="Surf" Width="200" Margin="20" ></Button>
+            <Button x:Name="btnSurfPage" Content="Surf" Width="200" Margin="20" Click="btnSurfPage_Click" ></Button>
             <Button Content="Shop" Width="200" Margin="20"></Button>
             <Button Content="My Account" Width="200" Margin="20"></Button>
 
         </StackPanel>
-
-
-
-
-
-
-
 
     </Grid>
 </Window>
