Changed DB to SurfsUP, added boardName and images, trying to create board page with MyBoards and Rent Boards, however the querys do not seem to be loading the data

--- a/SurfingRedone/Login.xaml
+++ b/SurfingRedone/Login.xaml
@@ -14,7 +14,8 @@
             <Label Content="Username" Foreground="White"></Label>
             <TextBox Name="tbxUserName" Background="DarkSlateGray" Foreground="White" FontSize="16"></TextBox>
             <Label Content="Password" Foreground="White"></Label>
-            <PasswordBox Name="tbxPassword" Background="DarkSlateGray" Foreground="White" FontSize="16"></PasswordBox>
+            <TextBox Name="tbxPassword" Background="DarkSlateGray" Foreground="White" FontSize="16"></TextBox>
+            <!--<PasswordBox Name="tbxPassword" Background="DarkSlateGray" Foreground="White" FontSize="16"></PasswordBox>-->
             <Button Name="btnSubmit" Content="Submit" Margin="60 10" Background="DarkSlateGray" Foreground="White" FontSize="16" Click="btnSubmit_Click"></Button>
         </StackPanel>
     </Border>
