--- a/SurfingRedone/App.xaml
+++ b/SurfingRedone/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SurfingRedone"
-             StartupUri="Login.xaml">
+             StartupUri="SurfPage1.xaml">
     <Application.Resources>
          
     </Application.Resources>
