--- a/SurfingRedone/AccountPage.xaml
+++ b/SurfingRedone/AccountPage.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SurfingRedone.AccountPage"
+﻿<Window x:Name="AccountPage1" x:Class="SurfingRedone.AccountPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SurfingRedone"
         mc:Ignorable="d"
-        Title="AccountPage" Height="450" Width="800">
+        Title="AccountPage" Height="450" Width="800" Loaded="AccountPage1_Loaded">
     <Grid x:Name="MainGrid"> 
         <Grid.ColumnDefinitions> <!--Grid for the MyAccount Page -->
             <ColumnDefinition Width="29*"/>
