--- a/SurfingRedone/SurfPage1.xaml
+++ b/SurfingRedone/SurfPage1.xaml
@@ -109,7 +109,7 @@
         <StackPanel Grid.Row="0" Grid.Column="1">
             <Label  x:Name="lblMyAccount" Content="My Account" HorizontalAlignment="Center"  VerticalAlignment="Top" FontSize="18" />
             <Image  x:Name="imgMyAccount" Height="80" Width="80"  Source="/images/Sample_User_Icon.png" />
-            <TextBlock Text="Signed In" HorizontalAlignment="Center"></TextBlock>
+            <TextBlock x:Name="signedName" Text="Signed In" HorizontalAlignment="Center"></TextBlock>
         </StackPanel>
 
 
