--- a/SurfingRedone/ShopPage.xaml
+++ b/SurfingRedone/ShopPage.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Name="AccountPage1" x:Class="SurfingRedone.AccountPage"
+﻿<Window x:Name="shopWindow" x:Class="SurfingRedone.ShopPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SurfingRedone"
         mc:Ignorable="d"
-        Title="AccountPage" Height="600" Width="800" Loaded="AccountPage1_Loaded_1">
+        Title="ShopPage" Height="600" Width="800" Loaded="shopWindow_Loaded">
     <Window.Resources>
         <Style x:Key="TabItemStyle1" TargetType="{x:Type TabItem}">
             <Setter Property="Template">
@@ -32,7 +32,7 @@
         <DataTemplate x:Key="dataTemplateBoards">
             <StackPanel Orientation="Horizontal" >
 
-                
+
                 <Image Source="{Binding Path=ImageURL}" 
                        Width="100" 
                        Height="130" />
@@ -41,13 +41,26 @@
                            Margin="20"
                            VerticalAlignment="Center"
                            HorizontalAlignment="Center"/>
-                <TextBlock Text="{Binding Path=Teacher_TeacherID}"
+                <TextBlock Text= "{Binding Path=Weight}"
                            FontSize="18"
                            Margin="20"
                            VerticalAlignment="Center"
                            HorizontalAlignment="Center"/>
+                <TextBlock Text= "{Binding Path=Colour}"
+                           FontSize="18"
+                           Margin="20"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"/>
+                <TextBlock Text= "{Binding Path=Price}"
+                           FontSize="18"
+                           Margin="20"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"/>
+                <Button x:Name="btnBuyBoard" Content="Buy Board" Click="btnBuyBoard_Click"></Button> 
                 
-               
+                
+
+
 
             </StackPanel>
         </DataTemplate>
@@ -68,14 +81,15 @@
                            Margin="20"
                            VerticalAlignment="Center"
                            HorizontalAlignment="Center"/>
-               
+
 
 
             </StackPanel>
         </DataTemplate>
     </Window.Resources>
-    <Grid x:Name="MainGrid"> 
-        <Grid.ColumnDefinitions> <!--Grid for the MyAccount Page -->
+    <Grid x:Name="MainGrid">
+        <Grid.ColumnDefinitions>
+            <!--Grid for the MyAccount Page -->
             <ColumnDefinition Width="29*"/>
             <ColumnDefinition Width="11*"/>
         </Grid.ColumnDefinitions>
@@ -83,75 +97,96 @@
             <RowDefinition Height="10*"/>
             <RowDefinition Height="21*"/>
         </Grid.RowDefinitions>
-        <Label x:Name="lblMainTitle" Content="Surfs Up" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="50" Width="196" Height="76" Grid.Row="0" />
-        
-        <Label x:Name="lblMyAccountTitle" Content="My Account" HorizontalAlignment="Center" FontSize="25" VerticalAlignment="Bottom" Grid.Row="0" Foreground ="Coral" ></Label>
+        <Label x:Name="lblMainTitle" Content="Surfs Up " HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="50" Width="196" Height="76" Grid.Row="0" />
+
+        <Label x:Name="lblMyAccountTitle" Content="SHOP" HorizontalAlignment="Center" FontSize="25" VerticalAlignment="Bottom" Grid.Row="0" Foreground ="Coral" ></Label>
         <StackPanel Grid.Row="0" Grid.Column="1">
             <Label  x:Name="lblMyAccount" Content="My Account" HorizontalAlignment="Center"  VerticalAlignment="Top" FontSize="18" />
             <Image  x:Name="imgMyAccount" Height="80" Width="80"  Source="/images/Sample_User_Icon.png" />
             <TextBlock x:Name="signedName" Text="Signed In" HorizontalAlignment="Center"></TextBlock>
-            <Button x:Name="btnShop" Content="Home" Width="200" Margin="5" Click="btnShop_Click"></Button>
         </StackPanel>
         <TabControl Grid.Row="1">
-            <TabItem Header="MyBoards" Name="tabMyBoards" Style="{DynamicResource TabItemStyle1}"  >
+            <TabItem Header="Short Boards" Name="tabShortBoards" Style="{DynamicResource TabItemStyle1}"  >
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"></ColumnDefinition>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1.5*"></RowDefinition>
                         <RowDefinition Height="8*"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <Label Content="My Purchased Boards" HorizontalAlignment="Center" FontSize="20"></Label> 
-                    <ListBox x:Name="lbxMyBoards" Margin="5" Grid.Column="0" Grid.Row="1"
-                             ItemTemplate="{StaticResource dataTemplateBoards }" SelectionChanged="lbxMyBoards_SelectionChanged" ></ListBox>
-                    <Label Content="Board Details" HorizontalAlignment="Center" FontSize="20" Grid.Column="1"></Label>
+                    <Label Content="ShortBoards" HorizontalAlignment="Center" FontSize="20"></Label>
+                    <ListBox x:Name="lbxShortBoards" Margin="5" Grid.Column="0" Grid.Row="1"
+                             ItemTemplate="{StaticResource dataTemplateBoards }"  ></ListBox>
+                   
 
-                    <StackPanel Grid.Column="1" Grid.Row="1">
-                        <Label Name="lblSelectedBoard" Content="Selected Board" HorizontalAlignment="Center" FontSize="20"></Label>
-                        <Image Name="imgBoard" Source="/images/SurfBoards/board1.png" Margin="5" Height="110" Width="151"></Image>
-                        <Label Content="Type" Foreground="Black"></Label>
-                        <TextBlock Name="tbxBoardType" Text="Short" Background="Gray" Foreground="White" FontSize="16"></TextBlock>
-                        <Label Content="Weight" Foreground="Black"></Label>
-                        <TextBlock Name="tbxBoardWeight" Text="70kg" Background="Gray" Foreground="White" FontSize="16"></TextBlock>
-                    </StackPanel>
+                    
 
 
 
                 </Grid>
-               
+
             </TabItem>
-            <TabItem Header="My Lessons" Name="tabMyLessons" Style="{DynamicResource TabItemStyle1}"  >
+            <TabItem Header="Long Boards" Name="tabLongBoards" Style="{DynamicResource TabItemStyle1}"  >
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"></ColumnDefinition>
+
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="1.5*"></RowDefinition>
+                        <RowDefinition Height="8*"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <ListBox x:Name="lbxMyLessons" Margin="5" Grid.Column="0" Grid.Row="1"
-                             ItemTemplate="{StaticResource dataTemplateLesson }" d:ItemsSource="{d:SampleData ItemCount=5}"   ></ListBox>
-                    
+
+                    <Label Content="Long Boards" HorizontalAlignment="Center" FontSize="20"></Label>
+                    <ListBox x:Name="lbxLongBoards" Margin="5" Grid.Column="0" Grid.Row="1"
+                             ItemTemplate="{StaticResource dataTemplateBoards }"  ></ListBox>
+
+
+
+
+
+
                 </Grid>
-                
 
             </TabItem>
-        </TabControl>
+            <TabItem Header="Mini Boards" Name="tabMiniBoards" Style="{DynamicResource TabItemStyle1}"  >
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
 
-        <!--<StackPanel Grid.Row="1" Grid.Column="0" Margin="30,30,30,30" >
-            <Button x:Name="btnSurfPage" Content="My Boards" Width="200" Margin="30" ></Button>
-            <Button x:Name="btnShop" Content="My Lessons" Width="200" Margin="30"></Button>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1.5*"></RowDefinition>
+                        <RowDefinition Height="8*"></RowDefinition>
+                    </Grid.RowDefinitions>
+
+                    <Label Content="Mini Boards" HorizontalAlignment="Center" FontSize="20"></Label>
+                    <ListBox x:Name="lbxMiniBoards" Margin="5" Grid.Column="0" Grid.Row="1"
+                             ItemTemplate="{StaticResource dataTemplateBoards }"  ></ListBox>
+
+
+
+
+
+
+                </Grid>
+
+            </TabItem>
             
 
-        </StackPanel>-->
+
+        </TabControl>
+
+       
         <StackPanel x:Name="Wallet" Background="Black" Grid.Row="1" Grid.Column="1" Margin="15">
             <Label Content="Wallet" FontSize="30" HorizontalAlignment="Center" Foreground="WhiteSmoke"></Label>
             <Separator Margin="0, 20"></Separator>
-            
+
             <Label Content="Balance" HorizontalAlignment="Center" FontSize="20" Foreground="White"></Label>
-            <TextBlock Name="tbxBoard" Background="Gray" Foreground="White" FontSize="16"></TextBlock>
+            <TextBlock Name="tbxBalance" Background="Gray" Foreground="White" FontSize="16"></TextBlock>
             <Button x:Name="btnDeposit" Content="Add Funds" Margin="15"></Button>
 
         </StackPanel>
