--- a/SurfingRedone/SurfPage1.xaml
+++ b/SurfingRedone/SurfPage1.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SurfingRedone"
         mc:Ignorable="d"
-        Title="SurfPage1" Height="500" Width="900" Loaded="Window_Loaded">
+        Title="SurfPage1" Height="580" Width="1000" Loaded="Window_Loaded">
     <!--Creating Data Templates -->
     <Window.Resources>
         <DataTemplate x:Key="dataTemplateTeachers">
@@ -110,6 +110,7 @@
             <Label  x:Name="lblMyAccount" Content="My Account" HorizontalAlignment="Center"  VerticalAlignment="Top" FontSize="18" />
             <Image  x:Name="imgMyAccount" Height="80" Width="80"  Source="/images/Sample_User_Icon.png" />
             <TextBlock x:Name="signedName" Text="Signed In" HorizontalAlignment="Center"></TextBlock>
+            <Button x:Name="btnShop" Content="Home" Width="200" Margin="5" Click="btnShop_Click"></Button>
         </StackPanel>
 
 
@@ -189,7 +190,7 @@
                 <Grid>
                        
                     
-                    <ListBox x:Name="lbxBeaches" 
+                    <ListBox x:Name="lbxBeaches"
                             HorizontalAlignment="Left"
                              Height="260"
                              Width="600"
