--- a/SurfingRedone/ShopPage.xaml
+++ b/SurfingRedone/ShopPage.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SurfingRedone"
         mc:Ignorable="d"
-        Title="ShopPage" Height="600" Width="800" Loaded="shopWindow_Loaded">
+        Title="ShopPage" Height="600" Width="800" Loaded="shopWindow_Loaded" Background="Bisque">
     <Window.Resources>
         <Style x:Key="TabItemStyle1" TargetType="{x:Type TabItem}">
             <Setter Property="Template">
